# The-Flap-Compiler

./: .gitignore  AUTEURS  README.md  dune-project
tests/: dune
tests/01-Parsing/: 001-constructor-application.bad.hopix  001-constructor-application.bad.test  001-constructor-application.good.test  002-app2.bad.test  003-app2-2.bad.test  004-app2-3.bad.test  005-app3.bad.test  006-lexer-var-id-1.bad.test  006-lexer-var-id-1.good.test  007-lexer-var-id-2.bad.test  007-lexer-var-id-2.good.test  008-lexer-all-id-1.bad.test  008-lexer-all-id-1.good.test  009-lexer-constr-id-1.bad.hopix  009-lexer-constr-id-1.bad.test  009-lexer-constr-id-1.good.test  009-lexer-constr-id-2.good.test  010-lexer-constr-id-2.bad.test  010-lexer-constr-id-2.good.test  011-lexer-constr-id-3.bad.test  011-lexer-constr-id-3.good.test  012-lexer-label-id-1.bad.test  012-lexer-label-id-1.good.test  012-lexer-label-id-2.bad.test  012-lexer-label-id-2.good.test  013-type-con-id-1.bad.test  013-type-con-id-1.good.test  014-type-con-id-2.bad.test  014-type-con-id-2.good.test  015-int-literal-1.bad.test  015-int-literal-1.good.test  016-int-literal-2.bad.test  016-int-literal-2.good.test  017-int-literal-3.bad.test  017-int-literal-3.good.test  018-int-literal-4.bad.test  018-int-literal-4.good.test  019-int-literal-5.bad.test  019-int-literal-5.good.test  020-int-literal-6.bad.test  (+203 more)
tests/02-Interpreter/: 01-arithmetic-01.test  02-arithmetic-02.test  03-arithmetic-03.test  04-arithmetic-04.test  05-arithmetic-05.test  06-arithmetic-06.test  07-arithmetic-07.test  08-arithmetic-08.test  09-boolean-01.test  (+63 more)
(+223 files in other folders)
